--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -9,7 +9,10 @@
 		<h1>Welcome Home! <%= user.username%></h1> 		
 	</div>
 
-	<a href="/home/alluser"> View users</a> |
+	
+		<a href="/home/alluser"> View users</a>
+	
+
 	<a href="/logout"> logout</a><br>
 
 
