--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -10,10 +10,11 @@
 	</div>
 
 	
-		<a href="/home/alluser"> View users</a>
-	
+		<a href="/home/alluser"> View users</a>|
+		<a href="/home/View_books">View_books</a>
 
 	<a href="/logout"> logout</a><br>
+	
 
 
 	Name:<%= user.username %>    <br>
