--- a/views/home/view_books.ejs
+++ b/views/home/view_books.ejs
@@ -30,7 +30,7 @@
             <td><%= booklist[i].price %></td>
             <td><%= booklist[i].discription %></td>
 			<td>
-				<a href="/home/edit/<%= booklist[i].id %>">EDIT</a> | 
+				<a href="/home/update/<%= booklist[i].id %>">EDIT</a> | 
 				<a href="/home/delete/<%= booklist[i].id %>">DELETE</a>  
 			</td>
 		</tr>
